# rag-master-book

./: .gitignore  GEMINI.md  How_to_invest_money.txt  README.md  main.py  pyproject.toml
chapter_04/: 01_parent_child_retriever.py  02_1_multi_query_retriever.py  02_2_hyde_retriever.py  03_1_sparse_retriever.py  03_2_dense_retriever.py  03_3_ensemble_retriever.py  04_1_llm_reranking.py  04_2_cross_encoder_reranking.py  inspect_parent_child.py  visualize_split.py
chapter_06/: 01_langgraph_components.md  02_1_loop.py  02_2_conditional.py  02_3_streaming.py  02_4_persistence.py  02_5_human_in_the_loop.py  03_1_self_corrective_rag.py  03_2_code_assist_chatbot.py
chapter_08/: 01_raft_paper.md  02_performance_tips.md  03_raft_dataset_generator.py  04_raft_fine_tuning.py  05_fine_tuning_summary.md
data/: lcel_docs.txt
data/chroma_db/8a968152-e333-4791-80b9-194f9f38a15e/: index_metadata.pickle
