[project]
name = "rag-master-book"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb==0.5.23",
    "faiss-cpu>=1.13.0",
    "langchain>=0.3.0,<0.4.0",
    "langchain-chroma",
    "langchain-community>=0.3.0,<0.4.0",
    "langchain-core>=0.3.84",
    "langchain-openai>=0.3.0,<0.4.0",
    "langchain-text-splitters>=0.3.0,<0.4.0",
    "pypdf>=6.10.0",
    "python-dotenv>=1.2.2",
]
